fixed fotter alignemnt issues

--- a/client/src/Components/Global/Footer.css
+++ b/client/src/Components/Global/Footer.css
@@ -8,6 +8,6 @@
     color: white;
     text-align: center;
     padding-top: auto;
-    padding-bottom: auto;
+    /* padding-bottom: auto; */
     z-index:10;
 }
