--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -16,9 +16,3 @@ h3 {
 h3 {
     margin-left: 10px;
 }
-
-li {
-
-    margin-top: 25px;
-    /* margin-bottom: 20px; */
-}
